<resources>
    <string name="app_name">Pickle</string>
    <string name="sharedPreferences">permissions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="customer_details_note">Note: We make deliveries before 8AM. This Information helps us leave the package at the right door</string>

    <string name="locationDenied">we need get location and send SMS for performing necessary task. Please permit the permission through " +
                    "Setting screen. \n\n Select Permission -> Enable permission</string>
    <string-array name="type">
        <item>solid</item>
        <item>liquid</item>
    </string-array>

    <string-array name="liquid">
        <item>liters</item>
        <item>ml</item>
    </string-array>

    <string-array name="solid">
        <item>kg</item>
        <item>g</item>
        <item>units</item>
        <item>pieces</item>
    </string-array>

    <string-array name="ProductCategory">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Grocery</item>
        <item>Dairy</item>
    </string-array>


    <string name="gpsText">"current location is stored in database \nYou can update it by going to -> Address in navigation"</string>

    <string name="tapToMore">Tap to view more</string>

    <!--    CAT_ONE = "Fruits";-->
    <!--    CAT_TWO = "Vegetables";-->
    <!--    CAT_THREE = "Dairy";-->
    <!--    CAT_FOUR = "Grocery";-->
    <string name="CAT_ONE">Fruits &amp; Vegetables</string>
    <string name="CAT_TWO">Branded Food</string>
    <string name="CAT_THREE">Dairy</string>
    <string name="CAT_FOUR">Grocery</string>
    <string name="CAT_FIVE">Household</string>
    <string name="CAT_SIX">Personal Care</string>

    <string name="eveningDeliveryTime">4:00 PM ~ 6:00PM</string>
    <string name="morningDeliveryTime">7:00 AM ~ 9:00AM</string>

    <string name="delivery_slot_one">@string/morningDeliveryTime</string>
    <string name="delivery_slot_two">@string/eveningDeliveryTime</string>
    <string name="delivery_slot_three">Delivery within 90 min</string>
    <string name="delivery_charge_alert">₹%s delivery will be charged since your order is %s ₹%s</string>
    <string name="orderOnCall">+91 9669668379</string>

    <string name="delivery_cancel_msg">Orders cannot be canceled after %s</string>
    <string name="comp_desc">ByteMint is a professional software services provider that specializes in delivering fully managed solutions based on Microsoft .NET, Java, Ruby on Rails, Angular, React, JavaScript, Android, iOS, Hadoop, and NoSQL. ByteMint also helps companies to build a sustainable competitive advantage on top of Cloud Foundry, blockchain, and artificial intelligence technologies</string>
    <string name="comp_mission">Our mission is to transform the ideas and needs of our customers into business value by developing stable and innovative solutions with high-level expertise and competitive spirit.</string>
    <string name="pcoins_percent_cut_dialog">you can only avail upto 5% on order 100 or above</string>
    <string name="order_detail">We currently accepting orders only in <font color='#ffff4444'>Indore*</font> </string>

</resources>
