<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.pickleindia.pickle.models.ProductModel" />

        <import type="com.pickleindia.pickle.utils.Constant" />

        <import type="android.view.View" />

        <variable
            name="productList"
            type="java.util.List&lt;ProductModel>" />

        <variable
            name="typeface"
            type="android.graphics.Typeface" />

        <variable
            name="homeFragment"
            type="com.pickleindia.pickle.navigation.HomeFragment" />

        <variable
            name="isLoading"
            type="androidx.databinding.ObservableBoolean" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_home_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainActColor"
        android:orientation="vertical"
        tools:context=".navigation.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_order_toolbar"
                style="@style/ToolbarTheme"
                collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/tool_bar_navigation"
                app:title=" "
                app:titleMargin="18dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:scaleY="1.2"
                    android:scaleX="1.2"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/bg_toolbar_image" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/ll2"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewFruits"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icFruitBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_ONE)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/grid_view_iv_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_fruits" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_ONE"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/ll3"
                    app:layout_constraintStart_toEndOf="@+id/ll1">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewVegetables"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icVegetableBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_TWO)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:scaleType="fitCenter"
                            android:scaleX="1.2"
                            android:scaleY="1.2"
                            android:src="@drawable/ic_vegetable" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_TWO"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/ll4"
                    app:layout_constraintStart_toEndOf="@+id/ll2">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewDairy"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icDairyBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_THREE)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:src="@drawable/ic_dairy" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_THREE"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ll3">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewBeverages"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icDairyBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_FOUR)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="6dp"
                            android:scaleX="1.1"
                            android:scaleY="1.2"
                            android:src="@drawable/ic_grocery" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_FOUR"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ll3"
                    tools:layout_editor_absoluteY="379dp">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewHomecare"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icHouseholdBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_FIVE)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="6dp"
                            android:scaleX="1.3"
                            android:scaleY="1.3"
                            android:src="@drawable/ic_household" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_FIVE"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ll3"
                    tools:layout_editor_absoluteY="379dp">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewPersonalCare"
                        android:layout_width="@dimen/card_view_category_width"
                        android:layout_height="@dimen/card_view_category_height"
                        android:background="@color/white"
                        android:backgroundTint="@color/icVegetableBg"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{() -> homeFragment.navigateToProductFragment(Constant.CAT_SIX)}"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="6dp"
                            android:src="@drawable/ic_personal_care" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:text="@string/CAT_SIX"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
                </LinearLayout>

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/flow3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:constraint_referenced_ids="ll1,ll2,ll3,ll4,ll5,ll6"
                    app:flow_horizontalGap="8dp"
                    app:flow_horizontalStyle="spread"
                    app:flow_verticalGap="16dp"
                    app:flow_wrapMode="aligned"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/carouselView" />

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="17dp" />


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="Products you may like         \u2192"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline5"
                    app:layout_constraintTop_toBottomOf="@+id/flow3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/suggestionRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="306dp"
                    android:layout_marginBottom="60dp"
                    android:overScrollMode="never"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/progressBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:list="@{productList}"
                    app:viewType="@{1}" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="@{isLoading? View.VISIBLE: View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/suggestionRecyclerView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/suggestionRecyclerView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>